methods.args.MethodsArgs.scala.code
def move(stepCount: Int, forwar:Boolean) {
  if (forwar == true){
  
  for (i <- 1 to stepCount){
    forward()
  }
  }
  else {
    for (i <- 1 to stepCount) {
      backwar()
    }
  }
  
  
}